Inmob-Salesforce/force-app/main/default/objects/Activity/fields/CI_Creado_desde__c.field-meta.xml
<CustomField>
    <fullName>CI_Creado_desde__c</fullName>
    <formula>IF( BEGINS( WhatId, &apos;001&apos; ), &apos;Cuenta&apos;, IF( BEGINS( WhatId, &apos;006&apos; ), &apos;Oportunidad&apos;, &apos;Prospecto&apos; ) )

/*IF( BEGINS( WhatId, &apos;001&apos; ), &apos;Cuenta&apos;, &apos;Oportunidad&apos; )*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creado desde</label>
    <type>Text</type>
</CustomField>