Inmob-Salesforce/force-app/main/default/objects/Activity/fields/CI_Evento_flag__c.field-meta.xml
<CustomField>
    <fullName>CI_Evento_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo de excepción en la configuración de dado de baja a Oportunidad.</description>
    <inlineHelpText>Campo de excepción en la configuración de dado de baja a Oportunidad.</inlineHelpText>
    <label>Evento flag</label>
    <type>Checkbox</type>
</CustomField>