Inmob-Salesforce/force-app/main/default/objects/Activity/fields/CI_Motivo__c.field-meta.xml
<CustomField>
    <fullName>CI_Motivo__c</fullName>
    <label>Motivo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NO CONTESTA AÚN</fullName>
            </value>
            <value>
                <fullName>NO PUEDE ATENDER</fullName>
            </value>
            <value>
                <fullName>POR VISITAR OBRA</fullName>
            </value>
            <value>
                <fullName>REVISANDO INFORMACIÓN</fullName>
            </value>
            <value>
                <fullName>CLIENTE YA VISITÓ OBRA</fullName>
            </value>
            <value>
                <fullName>CLIENTE CON INTERÉS FUTURO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>